--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 				<h3>Build A Simple Blog App With Firebase In Android Studio</h3>
 				<br>
 				<h6>14th October 2019</h6>
-				<h6>Rakesh Kumar</h6>
-				<h6>#nature</h6>
+				<h6>Atul kumar</h6>
+				<h6>#appdevelopment</h6>
 				<p>Firebase is a Backend-as-a-Service that started as a YC11 startup and grew up into a next generation app development platform on Google Cloud Platform.</p>
 				<a href="#">Read more >></a>
 			</div>
@@ -154,9 +154,9 @@
 				<h3>The Absolute Beginner's Guide To Webflow</h3>
 				<br>
 				<h6>14th October 2019</h6>
-				<h6>Rakesh Kumar</h6>
-				<h6>#nature</h6>
-				<p>n short WebFlow is a web design tool,CMS and hosting platform. Each aspect of the platform is represented by a particular product/feature set........</p>
+				<h6>Aman Raj Sunderam</h6>
+				<h6>#webdesign</h6>
+				<p>In short WebFlow is a web design tool,CMS and hosting platform. Each aspect of the platform is represented by a particular product/feature set........</p>
 				<a href="#">Read more >></a>
 			</div>
 		</div>
